fix #345 - css overflow hidden

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -4234,7 +4234,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .tab-content {
-  overflow: auto;
+  overflow: hidden;
 }
 
 .tabs-below > .nav-tabs,
